# bevy_nested_tooltips

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  demonstation.webm
examples/: runtime_change.rs  showcase_hover.rs  showcase_middle_mouse.rs  simple_hover.rs
src/: events.rs  highlight.rs  layout.rs  lib.rs  query.rs  term.rs  text_observer.rs
