[package]
name = "bevy_nested_tooltips"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app = { version = "0.17", default-features = false }
bevy_asset = { version = "0.17", default-features = false }
bevy_color = { version = "0.17", default-features = false }
bevy_derive = { version = "0.17", default-features = false }
bevy_ecs = { version = "0.17", default-features = false }
bevy_log = { version = "0.17", default-features = false }
bevy_math = { version = "0.17", default-features = false }
bevy_picking = { version = "0.17", default-features = false }
bevy_platform = { version = "0.17", default-features = false }
bevy_text = { version = "0.17", default-features = false }
bevy_time = { version = "0.17", default-features = false }
bevy_transform = { version = "0.17", default-features = false }
bevy_ui = { version = "0.17", default-features = false }
bevy_window = { version = "0.17", default-features = false }
tiny_bail = { version = "0.7", default-features = false, features = [
    "tracing",
    "error",
] }



[dev-dependencies]
bevy = "0.17"
bevy-inspector-egui = "0.35"
