[package]
name = "bevy_nested_tooltips"
version = "0.1.0"
edition = "2024"
description = "Nested Tooltips for the bevy game engine"
repository = "https://github.com/Lyndon-Mackay/bevy_nested_tooltips"
license = "MIT or Apache-2.0"
keywords = ["gamedev", "bevy","ui"]
categories = ["game-development"]

[dependencies]
bevy_app = { version = "0.17", default-features = false }
bevy_asset = { version = "0.17", default-features = false }
bevy_color = { version = "0.17", default-features = false }
bevy_derive = { version = "0.17", default-features = false }
bevy_ecs = { version = "0.17", default-features = false }
bevy_log = { version = "0.17", default-features = false }
bevy_math = { version = "0.17", default-features = false }
bevy_picking = { version = "0.17", default-features = false }
bevy_platform = { version = "0.17", default-features = false }
bevy_text = { version = "0.17", default-features = false }
bevy_time = { version = "0.17", default-features = false }
bevy_transform = { version = "0.17", default-features = false }
bevy_ui = { version = "0.17", default-features = false }
bevy_window = { version = "0.17", default-features = false }
tiny_bail = "0.7"


[dev-dependencies]
bevy = "0.17"
bevy-inspector-egui = "0.35"
