[package]
name = "bevy_nested_tooltips"
version = "0.3.0"
edition = "2024"
description = "Nested Tooltips for the bevy game engine"
repository = "https://github.com/Lyndon-Mackay/bevy_nested_tooltips"
license = "MIT or Apache-2.0"
keywords = ["gamedev", "bevy","ui","Tooltips"]
categories = ["game-development"]

[dependencies]
bevy_app = { version = "0.18.0", default-features = false }
bevy_asset = { version = "0.18.0", default-features = false }
bevy_color = { version = "0.18.0", default-features = false }
bevy_derive = { version = "0.18.0", default-features = false }
bevy_ecs = { version = "0.18.0", default-features = false }
bevy_log = { version = "0.18.0", default-features = false }
bevy_math = { version = "0.18.0", default-features = false }
bevy_picking = { version = "0.18.0", default-features = false }
bevy_platform = { version = "0.18.0", default-features = false }
bevy_text = { version = "0.18.0", default-features = false }
bevy_time = { version = "0.18.0", default-features = false }
bevy_transform = { version = "0.18.0", default-features = false }
bevy_ui = { version = "0.18.0", default-features = false }
bevy_window = { version = "0.18.0", default-features = false }
tiny_bail = {version = "0.7",default-features = false}


[dev-dependencies]
bevy = "0.18.0"
#bevy-inspector-egui = "0.35"


[features]
default = ["tiny_bail/tracing","tiny_bail/warn"]

# Set the log level to `trace`.
trace = ["tiny_bail/trace"]
# Set the log level to `debug`.
debug = ["tiny_bail/debug"]
# Set the log level to `info`.
info = ["tiny_bail/info"]
# Set the log level to `warn`.
warn = ["tiny_bail/warn"]
# Set the log level to `error`.
error = ["tiny_bail/error"]

tracing = ["tiny_bail/tracing"]
log = ["tiny_bail/log"]
